<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReminderActivity">

    <TextView
        android:id="@+id/remindText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/set_remind"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/custom_color_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remindText"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/custom_color_secondary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secondInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstInput"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/custom_color_secondary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notification" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondInput">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX="0.7"
            android:scaleY="0.7" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <Button
        android:id="@+id/setButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/set_r_b"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/custom_color_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ProgressBar
        android:id="@+id/signOutProgress"
        android:layout_width="75dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/custom_color_secondary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setButton"/>

    <TextView
        android:id="@+id/verfiedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/verified_google_account"
        android:textColor="#D3D3D3"
        android:textStyle="bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/username"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>