<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fireTopLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:keepScreenOn="true"
    tools:context=".DetectionActivity">

    <com.kajendra.emotion.UIComponents.CameraPreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.kajendra.emotion.UIComponents.GraphicsOverlay
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.kajendra.emotion.UIComponents.CameraPreview>

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/custom_color_text_secondary"
        android:enabled="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/snap"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smile_rating" />

    <TextView
        android:id="@+id/leftEyeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/left_eye"
        android:textColor="@color/custom_color_text_tertiary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/takePhoto"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_5sdp"/>

    <TextView
        android:id="@+id/rightEyeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:text="@string/right_eye"
        android:textColor="@color/custom_color_text_tertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/takePhoto"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/test"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_250sdp"
        android:adjustViewBounds="true"
        android:minHeight="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.hadi.emojiratingbar.EmojiRatingBar
        android:id="@+id/smile_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_140sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>